[gd_scene load_steps=6 format=3 uid="uid://dupkkttoim2p2"]

[ext_resource type="Script" path="res://scripts/game/map/renderers/map_renderer_2d.gd" id="1_yjnqm"]
[ext_resource type="PackedScene" uid="uid://bqnvj8j4vx2yd" path="res://scenes/game/map/map_node.tscn" id="2_node"]
[ext_resource type="PackedScene" uid="uid://c8yvxr1r1yvgj" path="res://scenes/game/map/map_connection.tscn" id="3_connection"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yjnqm"]
bg_color = Color(0.1, 0.1, 0.1, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.3, 0.3, 0.3, 1)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_border"]
bg_color = Color(0.15, 0.15, 0.15, 0)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.4, 0.5)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[node name="MapRenderer2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yjnqm")
node_scene = ExtResource("2_node")
connection_scene = ExtResource("3_connection")

[node name="Background" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_yjnqm")

[node name="MapViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="MapViewport" type="SubViewport" parent="MapViewportContainer"]
handle_input_locally = false
size = Vector2i(1032, 528)
render_target_update_mode = 4

[node name="MapCamera" type="Camera2D" parent="MapViewportContainer/MapViewport"]
position = Vector2(516, 264)
current = true
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 4.0
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="MapContent" type="Node2D" parent="MapViewportContainer/MapViewport"]
unique_name_in_owner = true

[node name="MapBorder" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 60.0
offset_right = -60.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_border")

[node name="ZoomControls" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="ZoomOut" type="Button" parent="ZoomControls"]
layout_mode = 2
text = "-"

[node name="ZoomReset" type="Button" parent="ZoomControls"]
layout_mode = 2
text = "重置"

[node name="ZoomIn" type="Button" parent="ZoomControls"]
layout_mode = 2
text = "+"

[node name="MapControls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -108.0
offset_right = 108.0
offset_bottom = -8.0
grow_vertical = 0
theme_override_constants/separation = 8

[node name="CenterButton" type="Button" parent="MapControls"]
layout_mode = 2
text = "居中"
icon_alignment = 1

[node name="ToggleReachableButton" type="Button" parent="MapControls"]
layout_mode = 2
toggle_mode = true
button_pressed = true
text = "只显示可达"
icon_alignment = 1

[node name="MapInfo" type="Label" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 210.0
offset_bottom = 36.0
text = "地图信息"
autowrap_mode = 3
